[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "5268ac-workspace"
version = "0.0.0"
description = "5268 research workspace: hexdumpy, unand, uboot, opentl, lib2spy, corpus"
requires-python = ">=3.10"
readme = "README.md"

[project.scripts]
boardfs = "boardfs.cli:main"

[project.optional-dependencies]
dissect = [
    "dissect.squashfs>=1.12; python_version>='3.10'",
    "dissect.extfs>=3.0; python_version>='3.10'",
]
# Tab completion + line editing in ``paceflash shell`` (pyreadline3 on Windows; Unix uses stdlib readline when built in).
shell = [
    "pyreadline3>=3.4; sys_platform == 'win32'",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.1",
]
# PKCS#12 decrypt for ``paceflash dump-eapol-cert``
eapol = [
    "cryptography>=41.0",
]

# Install everything editable from repo root:
#   pip install -e ".[dissect,shell,eapol,dev]"

[tool.setuptools.packages.find]
where = ["."]
include = ["hexdumpy*", "unand*", "opentl*", "lib2spy*", "corpus*", "uboot*", "binwalker*", "boardfs*", "paceflash*", "acspy*"]

[tool.pytest.ini_options]
testpaths = ["lib2spy/tests", "corpus/tests", "hexdumpy/tests", "tests", "unand", "uboot/tests", "binwalker/tests"]
pythonpath = ["."]
# Requires pytest-timeout (pip install pytest-timeout or pip install -e ".[dev]")
timeout = 120
timeout_method = "thread"
markers = [
    "integration: full flash dump or slow end-to-end (opt-in via PACE_FLASH_INTEGRATION=1)",
]
